# Ros2ImageProcess

./: .gitignore  Readme.md  config.yaml
drone_detector/: package.xml  setup.py
drone_detector/drone_detector/: drone_detector_node.py
face_check/: package.xml  setup.cfg  setup.py
face_check/face_check/: face_check_node.py
spot_detector/: CMakeLists.txt  package.xml
spot_detector/src/: spot_detector_node.cpp
video_play/: CMakeLists.txt  package.xml
video_play/src/: video_play_node.cpp
